--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "animate": "^1.0.0",
+    "animate.css": "^4.0.0",
+    "animated-vue": "^0.5.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
@@ -18,6 +20,7 @@
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-fullpage.js": "^0.1.5",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.1.6",
     "vue-scrollto": "^2.18.1",
     "vue-socket.io": "^3.0.7",
